--- a/app/views/wikitoissuectl/wikitoissue.html.erb
+++ b/app/views/wikitoissuectl/wikitoissue.html.erb
@@ -1,4 +1,4 @@
-<h2>WikitoissuectlController#wikitoissue</h2>
+<h2><%= l(:wiki_to_issue_title) %></h2>
 <p>
   <%= l(:label_project_id) %> <%= @project_id%>
 </p>
